...
  }
}

fileprivate extension MyProductView {
  private var title: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text("MyProduct")
        .font(.title.bold())
    }
    .foregroundColor(Color.theme.black)
    .frame(maxWidth: .infinity, alignment: .leading)
  }
  
...
                  }
              }
              
              Button {
                coordinator.show(.modify(product: page))
              } label: {
                Text("수정")
                  .font(.callout)
                  .fontWeight(.semibold)
                  .foregroundColor(Color.theme.white)
                  .padding(.horizontal, 20)
                  .padding(.vertical, 5)
                  .background {
...
