...
    .frame(height: 30)
  }
}

enum Tab: String, CaseIterable {
  case home = "house.fill"
  case productRegister = "arrow.up.square"
  case myProductList = "person.crop.circle"
}

extension View {
  func getSafeArea() -> UIEdgeInsets {
    guard let screen = UIApplication.shared.connectedScenes.first as? UIWindowScene else {
...
