...
              .fill(Color.theme.white)
          }
      }
      
      Spacer()
      
      Text("수정화면 입니다")
        .foregroundColor(Color.theme.red)
      
      Spacer()
      
    }
    .padding()
...
