...
  }
}


fileprivate extension AddProductView {
  private var addProductText: some View {
    Text("상품등록")
      .font(.title3)
      .fontWeight(.bold)
      .foregroundColor(Color.theme.black)
  }
  
  private var imagePickerView: some View {
...
